--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,42 @@
-<p>dashboard works!</p>
+    <section class="d-flex gap-3">
+        <div class="shadow border border-black p-3">
+            <h2>Veículos</h2>
+            <select>
+                <option value="">Territory</option>
+                <option value="">Mustang</option>
+                <option value="">Bronco</option>
+                <option value="">Ranger</option>
+            </select>
+            </div>
+        
+            <app-card />
+            <app-card />
+            <app-card />
+    </section>
+    <section>
+        <img src="http://localhost:3001/Mustang.png" alt="">
+    </section>
+    <section>
+        <table class="tabela-vin">
+            <thead>
+                <tr>
+                    <th>VIN</th>
+                    <th>ODOMETRO</th>
+                    <th>NÍVEL DO COMBUSTIVEL</th>
+                    <th>STATUS</th>
+                    <th>LAT</th>
+                    <th>LONG</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input type="text"></td>
+                    <td>80000km</td>
+                    <td>90%</td>
+                    <td>ON</td>
+                    <td>32.2831</td>
+                    <td>14.1625</td> 
+                </tr>
+            </tbody>
+        </table>
+    </section>
