--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
+<div class="body-home">
     <app-menu />
     <button (click)="logout()" class="btn btn-danger">Logout</button>
     <app-saudacao />
+</div>
