--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1>FORD ENTER</h1>
-<div class="d-flex flex-column justify-content-center align-items-center">
-    <router-outlet />
-</div>
+<header class="cabecalho">
+<img src="images/ford.png" alt="logo da ford">
 
+</header>
+
+    <div class="d-flex flex-column justify-content-center align-items-center">
+        <router-outlet />
+    </div>
