--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,15 @@
-<div class="bg-img">
-    <img src="images/ranger.png" alt="">
+<br><br><br><div class="bg-img">
+    <section class="login_section_carro">
+        <img src="images/ranger.png" alt="">
+    </section>
+    
+    <section class="login_section_forms">
+        <img id="logo-ford" src="images/ford.png" alt="logo da ford">
+        <p id="BV-login">Boas-vindas</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <app-login-form/>
+    </section>
 </div>
-<app-login-form/>
