--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,13 +2,5 @@
 *{
     padding: 0;
     gap: 0;
-    
-}
-.cabecalho{
-    border: 3px solid ;
-    padding-bottom: 25px;
-    height: auto;
-}
-.cabecalho img{
-    transform: scale(.15);
+    box-sizing: border-box;
 }
