--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-    <section class="d-flex gap-3">
+<app-menu />
+   <section class="d-flex gap-3">
         <div class="shadow border border-black p-3">
             <h2>Veículos</h2>
             <select (change)="onChangeSelect($event)">
