--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,12 @@
-<div class="body-home">
+<section id="background">
+    <div id="img-bg">
+        <img src="images/ranger.png" alt="Ford Ranger 2022">
+    </div>
+
     <app-menu />
-    <button (click)="logout()" class="btn btn-danger">Logout</button>
-    <app-saudacao />
-</div>
+
+    <div class="body-home">
+        <app-saudacao />
+    </div>
+
+</section>
