--- a/src/app/components/saudacao/saudacao.component.css
+++ b/src/app/components/saudacao/saudacao.component.css
@@ -1,7 +1,6 @@
 #BV{
-    font-size: 40px;
-    font-weight: bold;
-    color: rgb(13, 158, 13);
+    font-size: 20px;
+    color: #1351d8;
     padding: 0;
 justify-content: left;
 }
