--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,5 @@
-<div class="shadow border border-black p-3">
-<h2>{{ titulo }}</h2>
-<p>{{ valor }} unidades</p>
+<div id="card-box" class="shadow border border-black p-3">
+<h2 class="titulo">{{ titulo }}</h2>
+<p class="valor">{{ valor }} </p>
+<p class="unidades">unidades</p>
 </div>
