--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -1,11 +1,23 @@
-.tabela-vin{
-    display: flex ;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    justify-content: space-between;
-    border: 3px solid ;
-    border-collapse: separate;
-    border-spacing: 70px 10px;
-    
+#dashboard-div{
+    margin-top: 25px;
+}
+h2 {
+    border: 1px solid gray;
+    padding: 10px;
+    font-size: 32px;
+    font-weight: bold;
+}
+
+select{
+    padding-left: 5px;
+    font-size: 25px;
+}
+select:hover{
+    color: white;
+    background-color:#1351d8 ;
+}
+
+#card-veiculos:hover, app-card:hover{
+    border: solid 2px #1b357e;
+    transform: scale(1.2);
 }
