--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,29 +1,27 @@
 <app-menu />
-   <section class="d-flex gap-3">
-        <div class="shadow border border-black p-3">
-            <h2>Veículos</h2>
-            <select (change)="onChangeSelect($event)">
-              @for(v of veiculos; track v.id){
-                <option value="{{ v.id }}">{{ v.vehicle }}</option>
+<br>
+<div id="dashboard-div">
 
-              }
-            </select>
-            </div>
-        
-            <app-card [titulo]="'Total de Vendas'" [valor]=" veiculoSelecionado.volumetotal"/>
-            <app-card [titulo]="'Conectados'" [valor]=" veiculoSelecionado.connected"/>
-            <app-card [titulo]="'UpdateSoftware'" [valor]=" veiculoSelecionado.softwareUpdates"/>
-          
-    </section>
-    <section>
-        <img src="{{ veiculoSelecionado.img }}" alt="">
-    </section>
-    <section>
-      <app-car-table [vin]="veiculoSelecionado.vin" 
-      [lat]="vinInfos.lat"
-      [long]="vinInfos.long"
-      [nivelCombustivel]="vinInfos.nivelCombustivel"
-      [odometro]="vinInfos.odometro"
-      [status]="vinInfos.status"
-      />
-    </section>
+  <section class="d-flex  justify-content-center mx-auto gap-5">
+    <div id="card-veiculos" class="shadow border border-black p-3">
+      <h2>Veículos</h2>
+      <select (change)="onChangeSelect($event)">
+        @for(v of veiculos; track v.id){
+        <option value="{{ v.id }}">{{ v.vehicle }}</option>
+        }
+      </select>
+    </div>
+
+    <app-card [titulo]="'Total de Vendas'" [valor]=" veiculoSelecionado.volumetotal" />
+    <app-card [titulo]="'Conectados'" [valor]=" veiculoSelecionado.connected" />
+    <app-card [titulo]="'UpdateSoftware'" [valor]=" veiculoSelecionado.softwareUpdates" />
+
+  </section>
+  <section>
+    <img src="{{ veiculoSelecionado.img }}" alt="">
+  </section>
+  <section>
+    <app-car-table [vin]="veiculoSelecionado.vin" [lat]="vinInfos.lat" [long]="vinInfos.long"
+      [nivelCombustivel]="vinInfos.nivelCombustivel" [odometro]="vinInfos.odometro" [status]="vinInfos.status" />
+  </section>
+</div>
