centralizando a div login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,15 +1,16 @@
-<br><br><br><div class="bg-img">
-    <section class="login_section_carro">
-        <img src="images/ranger.png" alt="">
-    </section>
-    
-    <section class="login_section_forms">
-        <img id="logo-ford" src="images/ford.png" alt="logo da ford">
-        <p id="BV-login">Boas-vindas</p>
+<div class=" teste d-flex justify-content-center align-items-center h-100 w-100">
+    <div class="bg-img">
+        <section class="login_section_carro">
+            <img src="images/ranger.png" alt="">
+        </section>
+        
+        <section class="login_section_forms">
+            <img id="logo-ford" src="images/ford.png" alt="logo da ford">
         <br>
         <br>
-        <br>
-        <br>
-        <app-login-form/>
-    </section>
+            <p id="BV-login">Boas-vindas</p>
+            <br>
+            <app-login-form/>
+        </section>
+    </div>
 </div>
