--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-    <div class="d-flex flex-column justify-content-center align-items-center">
+    <div class="teste d-flex flex-column justify-content-center align-items-center">
         <router-outlet />
     </div>
