--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,4 +1,13 @@
+.teste {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 .bg-img{
+    margin-top: 25%;
     display: flex;
     justify-content: space-between;
     align-items: center;
